# Learn_wasmCloud

./: .gitignore  README.md  monorepo_setup.txt
.devcontainer/: Dockerfile
.devcontainer/scripts/: postCreateCommand.sh
.github/workflows/: TEMPLATE_actor.yml  TEMPLATE_provider.yml  monorepo-actor-release.yml  monorepo-actor-workflow.yml  release.yml
actor/api-gateway/: Cargo.toml  README.md  wasmcloud.toml
actor/api-gateway/src/: lib.rs
actor/chatlog/: Cargo.toml  README.md  codegen.toml  wasmcloud.toml
actor/chatlog/src/: lib.rs  store.rs
actor/hello/: Cargo.toml  README.md
actor/http-channel/: Cargo.toml  README.md  codegen.toml  wasmcloud.toml
actor/http-channel/src/: lib.rs
actor/nats-channel/: Cargo.toml  README.md  wasmcloud.toml
actor/nats-channel/src/: lib.rs
actor/temporary/: Cargo.toml  Makefile  README.md  wasmcloud.toml
actors/temporary/: Cargo.toml  Makefile  actor.mk  test-change.rs
actors/temporary/.github/workflows/: release.yml  release_original.yml
actors/temporary/src/: lib.rs
archived/: DISABLED_Cargo.toml
archived-workflows/: release_research.yml  release_v1.yml
