[package]
name = "temporary"
version = "0.0.20"
authors = ["Stephen Andary"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "temporary"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.10"
wasmcloud-interface-httpserver = "0.7"

# Due to using monorepo, profiles must be set in root Cargo.toml
# profiles for the non root package will be ignored, specify profiles at the workspace root
# if need specific profile for package, need to look up how to do this.
[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
